src/FinancialForce Accounting/objects/codaIntercompanyTransfer__c.object
<CustomObject>
    <customHelpPage>codahelpintercompanytransfer</customHelpPage>
    <description>An intermediate staging object used during the intercompany journal process.</description>
    <fields>
        <fullName>CanceledIntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canceled Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Canceling Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Cash Entry Number</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Cash Entry)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Company)</relationshipLabel>
        <relationshipName>Intercompany_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Document Bank Account)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Document Currency)</relationshipLabel>
        <relationshipName>DestinationIntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentPaymentMethod__c</fullName>
        <label>DEPRECATED: Destination Doc Pay Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationDocumentPeriod__c</fullName>
        <formula>IF( ISBLANK( DestinationCashEntry__c ), &apos;&apos;, DestinationCashEntry__r.Period__r.Name)</formula>
        <label>Destination Document Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentReference__c</fullName>
        <label>Destination Document Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentTotal__c</fullName>
        <formula>IF( ISBLANK( DestinationPayableInvoice__c ), DestinationPayableCreditNote__r.CreditNoteTotal__c, DestinationPayableInvoice__r.InvoiceTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentType__c</fullName>
        <label>Destination Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationJournalDate__c</fullName>
        <formula>IF( ISBLANK( DestinationPayableInvoice__c ), IF( ISBLANK( DestinationPayableCreditNote__c ), IF( ISBLANK(DestinationCashEntry__c), DestinationJournal__r.JournalDate__c, DestinationCashEntry__r.Date__c ), DestinationPayableCreditNote__r.CreditNoteDate__c ), DestinationPayableInvoice__r.InvoiceDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DestinationJournalDescription__c</fullName>
        <label>Destination Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DestinationJournalReference__c</fullName>
        <formula>IF(ISBLANK( DestinationCashEntry__c ), IF( ISBLANK( DestinationPayableInvoice__c ), IF( ISBLANK( DestinationPayableCreditNote__c ), DestinationJournal__r.Reference__c, DestinationPayableCreditNote__r.Reference1__c &amp; IF(ISBLANK(DestinationPayableCreditNote__r.Reference1__c) || ISBLANK(DestinationPayableCreditNote__r.Reference2__c), &apos;&apos;, &apos;, &apos;) &amp; DestinationPayableCreditNote__r.Reference2__c ), DestinationPayableInvoice__r.Reference1__c &amp; IF(ISBLANK(DestinationPayableInvoice__r.Reference1__c) || ISBLANK(DestinationPayableInvoice__r.Reference2__c), &apos;&apos;, &apos;, &apos;) &amp; DestinationPayableInvoice__r.Reference2__c ), SourceCashEntry__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Journal Number</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Journal)</relationshipLabel>
        <relationshipName>Intercompany_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationPayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Payable Credit Note Number</label>
        <referenceTo>codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationPayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Payable Invoice Number</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProcessingMessages__c</fullName>
        <label>Processing Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RejectReason__c</fullName>
        <label>Reason for Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SourceCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Cash Entry Number</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Cash Entry)</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Company)</relationshipLabel>
        <relationshipName>Intercompany_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Document Bank Account)</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfersSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDocumentDate__c</fullName>
        <label>Source Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceDocumentName__c</fullName>
        <formula>IF( ISBLANK( SourceSalesInvoice__c ), IF( ISBLANK( SourceSalesCreditNote__c ), IF( ISBLANK( SourceCashEntry__c ), SourceJournal__r.Name, SourceCashEntry__r.Name), SourceSalesCreditNote__r.Name ), SourceSalesInvoice__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceDocumentPeriod__c</fullName>
        <formula>IF( ISBLANK( SourceCashEntry__c ), &apos;&apos;, SourceCashEntry__r.Period__r.Name)</formula>
        <label>Source Document Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceDocumentReference__c</fullName>
        <label>Source Document Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SourceDocumentTotal1__c</fullName>
        <label>Source Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceDocumentTotal__c</fullName>
        <formula>IF( ISBLANK( SourceSalesInvoice__c ), SourceSalesCreditNote__r.CreditNoteTotal__c, SourceSalesInvoice__r.InvoiceTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceDocumentType__c</fullName>
        <label>Source Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceDocumentVendorAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceJournalDate__c</fullName>
        <formula>IF( ISBLANK( SourceSalesInvoice__c ), IF( ISBLANK( SourceSalesCreditNote__c ), IF( ISBLANK( SourceJournal__c ), SourceCashEntry__r.Date__c, SourceJournal__r.JournalDate__c ), SourceSalesCreditNote__r.CreditNoteDate__c ), SourceSalesInvoice__r.InvoiceDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceJournalDescription__c</fullName>
        <label>Source Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SourceJournalReference__c</fullName>
        <formula>IF( ISBLANK( SourceSalesInvoice__c ), IF( ISBLANK( SourceSalesCreditNote__c ),  SourceJournal__r.Reference__c, SourceSalesCreditNote__r.CustomerReference__c ),  SourceSalesInvoice__r.CustomerReference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED: Source Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Journal Number</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Journal)</relationshipLabel>
        <relationshipName>Intercompany_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourcePayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Payable Credit Note Number</label>
        <referenceTo>codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Payable Credit Note Number)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourcePayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Payable Invoice Number</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Payable Invoice Number)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceSalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Credit Note Number</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceSalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Invoice Number</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Transfer</label>
    <listViews>
        <fullName>Available</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceJournal__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>ProcessingMessages__c</columns>
        <columns>ProcessingStatus__c</columns>
        <columns>DestinationJournal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Available</label>
    </listViews>
    <listViews>
        <fullName>Complete</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceJournal__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>ProcessingMessages__c</columns>
        <columns>ProcessingStatus__c</columns>
        <columns>DestinationJournal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Complete</label>
    </listViews>
    <listViews>
        <fullName>CompleteInterCompanyCentralizedSCN</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceSalesCreditNote__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationJournal__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyforCentralizedSellingSalesCreditNote</value>
        </filters>
        <label>Complete Intercompany Centralized SCN</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanyCashEntries</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceCashEntry__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationCashEntry__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyCashEntries</value>
        </filters>
        <label>Complete Intercompany Cash Entries</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanyCentralizedPCN</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourcePayableCreditNote__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationJournal__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyforCentralizedBuyingPayableCreditNote</value>
        </filters>
        <label>Complete Intercompany Centralized PCN</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanyCentralizedPIN</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourcePayableInvoice__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationJournal__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyforCentralizedBuyingPayableInvoice</value>
        </filters>
        <label>Complete Intercompany Centralized PIN</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanyCentralizedSIN</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceSalesInvoice__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationJournal__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyforCentralizedSellingSalesInvoice</value>
        </filters>
        <label>Complete Intercompany Centralized SIN</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanyJournals</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceJournal__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationJournal__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyJournals</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanyCancelingJournals</value>
        </filters>
        <label>Complete Intercompany Journals</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanySalesCreditNotes</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceSalesCreditNote__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationPayableCreditNote__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanySalesCredit</value>
        </filters>
        <label>Complete Intercompany Sales Credit Notes</label>
    </listViews>
    <listViews>
        <fullName>CompleteIntercompanySalesInvoices</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceSalesInvoice__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>DestinationPayableInvoice__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>codaIntercompanyTransfer__c.IntercompanySales</value>
        </filters>
        <label>Complete Intercompany Sales Invoices</label>
    </listViews>
    <listViews>
        <fullName>Error</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceJournal__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>ProcessingMessages__c</columns>
        <columns>ProcessingStatus__c</columns>
        <columns>DestinationJournal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>SourceCompany__c</columns>
        <columns>SourceJournal__c</columns>
        <columns>SourceSalesInvoice__c</columns>
        <columns>SourceSalesCreditNote__c</columns>
        <columns>SourceJournalDescription__c</columns>
        <columns>DestinationCompany__c</columns>
        <columns>ProcessingMessages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ICT{000000}</displayFormat>
        <label>Intercompany Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Transfers</pluralLabel>
    <recordTypes>
        <fullName>IntercompanyCancelingJournals</fullName>
        <active>true</active>
        <description>The source document is a canceling journal. This option provides access to the intercompany transfer canceling journal page layout.</description>
        <label>Intercompany Canceling Journals</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanyCashEntries</fullName>
        <active>true</active>
        <description>The source document is a cash entry. This option provides access to the inter company transfer cash entry page layout.</description>
        <label>Intercompany Cash Entries</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanyJournals</fullName>
        <active>true</active>
        <description>The source document is a journal. This option provides access to the inter company transfer journal page layout.</description>
        <label>Intercompany Journals</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanySales</fullName>
        <active>true</active>
        <description>The source document is a sales invoice. This option provides access to the inter company transfer sales invoice page layout.</description>
        <label>Intercompany Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanySalesCredit</fullName>
        <active>true</active>
        <description>The source document is a sales credit note. This option provides access to the inter company transfer sales credit note page layout.</description>
        <label>Intercompany Sales Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanyforCentralizedBuyingPayableCreditNote</fullName>
        <active>true</active>
        <description>The source document is a payable credit note. This option provides access to the inter company transfer payable credit note page layout.</description>
        <label>Intercompany for Centralized Buying - Payable Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanyforCentralizedBuyingPayableInvoice</fullName>
        <active>true</active>
        <description>The source document is a payable invoice. This option provides access to the inter company transfer payable  invoice page layout.</description>
        <label>Intercompany for Centralized Buying - Payable Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanyforCentralizedSellingSalesCreditNote</fullName>
        <active>true</active>
        <description>The source document is a sales credit note. This option provides access to the inter company transfer sales credit note page layout. The sales credit note will facilitate Selling on Behalf.</description>
        <label>Intercompany for Centralized Selling - Sales Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>IntercompanyforCentralizedSellingSalesInvoice</fullName>
        <active>true</active>
        <description>The source document is a sales invoice. This option provides access to the inter company transfer sales invoice page layout. The sales invoice will facilitate Selling on Behalf.</description>
        <label>Intercompany for Centralized Selling - Sales Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>